StringDecoder imports its LUT from executable